--- a/config.json
+++ b/config.json
@@ -6,5 +6,13 @@
   "listen_topics": [],
   "http_host": "127.0.0.1",
   "http_port": 5000,
-  "launcher_config_path": "launcher_config.json"
+  "launcher_items": {
+    "关机": {
+      "cmd": "shutdown -s -t 60",
+      "para": "",
+      "bafy_topic": "Xhf4ekJae009"
+    }
+  },
+  "enable_server": false,
+  "auto_start": false
 }
